--- a/ChromeExtensionTest/manifest.json
+++ b/ChromeExtensionTest/manifest.json
@@ -1,24 +1,27 @@
 {
-    "manifest_version": 2,
-    "name": "Perricornios - Appbuelito",
-    "version": "1.0",
-    "author": "Perricornios Co.",
-    "description": "Extension para la seguridad de la gente mayor.",
-    "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
-    },
-    "browser_action": {
-        "default_icon": "icon16.png",
-        "default_title": "Appbuelito",
-        "default_popup": "index.html"
-    },
-
-    "content_scripts": [ 
-        {
-          "matches": ["https://www.bodog.com/*"],
-          "js": ["content-script.js"]
-        }
-      ]
+  "manifest_version": 2,
+  "name": "Perricornios - Appbuelito",
+  "version": "1.0",
+  "author": "Perricornios Co.",
+  "description": "Extension para la seguridad de la gente mayor.",
+  "permissions": ["tabs"],
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["popup.js"]
+    }
+  ]
 }
